--- a/assets/css/header/perfil.css
+++ b/assets/css/header/perfil.css
@@ -1,11 +1,12 @@
 header {
-	background: url("../../img/perfil/bg-header.jpg") no-repeat center/cover;
-	display: flex;
 	align-items: center;
+	background: url("../../img/perfil/bg-header.jpg") no-repeat center/cover;
+	color: var(--white-300);
+	display: flex;
+	font-weight: 600;
 	flex-direction: row;
 	padding: 1rem;
-	font-weight: 600;
-	color: var(--white-300);
+	height: 400px;
 }
 
 .perfil {
@@ -44,7 +45,7 @@ header {
 .perfil__sobre {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	height: 100px;
 }
 
 @media screen and (min-width:  0px){
