--- a/assets/css/footer/formulario.css
+++ b/assets/css/footer/formulario.css
@@ -24,7 +24,7 @@ footer {
 input, textarea {
 	margin-top: 8px;
 	padding: .8rem;
-	border-radius: 5px;
+	border-radius: 20px;
 	border: 0;
 	transition: all 0.30s ease-in-out;
 	outline: none;
@@ -51,7 +51,8 @@ input:focus, textarea:focus {
 .form_contato_botao {
 	background: #007BFF;
 	padding: .8rem;
-	border-radius: 5px;
+	margin: 0px 2px;
+	border-radius: 20px;
 	border: 0;
 	color: var(--white-300);
 	font-size: 1.8rem;
