--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -27,6 +27,8 @@ html {
 	font-family: "PT Sans";
 	font-weight: 500;
 	font-size: 62.5%;
+	margin: 0;
+	padding: 0;
 }
 
 body{
@@ -37,7 +39,6 @@ body{
 	font-size: 1.6rem;
 	flex-direction: column;
 	position: relative;
-	padding: 1rem;
 	height: 100vh;
 }
 
@@ -66,8 +67,7 @@ body{
 .box {
 	display: flex;
 	flex-direction: column;
-	grid-gap: 0.8rem;
-	padding: 1rem;
+	gap: 0.8rem;
 	max-width: 100%;
 	width: 970px;
 }
@@ -76,6 +76,9 @@ main {
 	padding: 1.2rem;
 }
 
+.titulo__sessao {
+	color: #8F4342;
+}
 
 svg{
 	fill: #333333;
@@ -100,13 +103,59 @@ a{
 
 .icon {
 	align-items: center;
-	box-shadow: 2px 2px 14px -6px rgba(0,0,0,0.80);
+	box-shadow: 0px 0px 16px -6px rgba(0,0,0,0.70);
 	border-radius: 10px;
 	display: flex;
 	justify-content: center;
 	margin: 5px;
-	max-width: 80px;
-	max-height: 80px;
 	min-width: 80px;
 	min-height: 80px;
+}
+
+.hobbies__skills {
+	display: grid;
+}
+
+@media screen and (min-width: 0px){
+
+	.hobbies__skills {
+		justify-content: center;
+		grid-template-columns: auto;
+		grid-template-rows: 2;
+		gap: 0;
+	}
+
+	.skills__sessao {
+		grid-area: skills;
+		grid-column: 1;
+		grid-row: 1;
+	}
+
+	.hobbies__sessao {
+		grid-area: hobbies;
+		grid-column: 1;
+		grid-row: 2;
+	}
+
+}
+
+@media screen and (min-width: 783px){
+	.hobbies__skills {
+		grid-template-columns: auto auto;
+		grid-template-rows: 1;
+		gap: 10%;
+	}
+
+	.skills__sessao {
+		grid-area: skills;
+		grid-column: 1;
+		grid-row: 1;
+	}
+
+	.hobbies__sessao {
+		grid-area: hobbies;
+		grid-column: 2;
+		grid-row: 1;
+	}
+
 }
