--- a/assets/css/main/formacao__sessao.css
+++ b/assets/css/main/formacao__sessao.css
@@ -7,13 +7,15 @@
 }
 
 .formacao__curso{
+	background: #FFFFFF;
+	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
+	border-radius: 8px;
+	border-left: 10px gray solid;
+	height: 350px;
+	margin-bottom: 10px;
 	padding: 0 10px;
 	padding-bottom: 10px;
-	border: 1px gray solid;
-	border-radius: 10px;
-	border-left: 10px gray solid;
-	margin-bottom: 10px;
-	max-width: 380px;
+	max-width: 280px;
 	width: 100%;
 }
 
