--- a/assets/css/main/skills__sessao.css
+++ b/assets/css/main/skills__sessao.css
@@ -9,7 +9,7 @@
 	align-items: center;
 	background: #FFFFFF;
 	border-radius: 10px;
-	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
+	box-shadow: 0px 0px 14px -7px rgba(0,0,0,0.80);
 	display: flex;
 	height: auto;
 	width: 300px;
@@ -28,7 +28,7 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	height: auto;
-	width: 300px;
+	margin-right: 10px;
 }
 
 .skills__card__icon {
