--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -40,14 +40,16 @@ body{
 	flex-direction: column;
 	position: relative;
 	height: 100vh;
+	margin: 0;
+	padding: 0;
 }
 
-#name {
+#citacao {
 	margin: 0.8rem 0;
 	text-shadow: 2px 2px 14px rgba(0,0,0,0.65);
 }
 
-#name::after {
+#citacao::after {
 	animation: blink 0.7s infinite;
 	content: "_";
 	margin-left: 5px;
@@ -65,15 +67,10 @@ body{
 }
 
 .box {
+	background-color: #e9ecef;
 	display: flex;
 	flex-direction: column;
-	gap: 0.8rem;
-	max-width: 100%;
-	width: 970px;
-}
-
-main {
-	padding: 1.2rem;
+	width: 100%;
 }
 
 .titulo__sessao {
@@ -91,16 +88,6 @@ a{
 	text-transform: none;
 }
 
-/* extra */
-
-.bg-light {
-	background-color: #e9ecef;
-}
-
-.b-radius-5 {
-	border-radius: 5px;
-}
-
 .icon {
 	align-items: center;
 	box-shadow: 0px 0px 16px -6px rgba(0,0,0,0.70);
@@ -112,50 +99,3 @@ a{
 	min-height: 80px;
 }
 
-.hobbies__skills {
-	display: grid;
-}
-
-@media screen and (min-width: 0px){
-
-	.hobbies__skills {
-		justify-content: center;
-		grid-template-columns: auto;
-		grid-template-rows: 2;
-		gap: 0;
-	}
-
-	.skills__sessao {
-		grid-area: skills;
-		grid-column: 1;
-		grid-row: 1;
-	}
-
-	.hobbies__sessao {
-		grid-area: hobbies;
-		grid-column: 1;
-		grid-row: 2;
-	}
-
-}
-
-@media screen and (min-width: 783px){
-	.hobbies__skills {
-		grid-template-columns: auto auto;
-		grid-template-rows: 1;
-		gap: 10%;
-	}
-
-	.skills__sessao {
-		grid-area: skills;
-		grid-column: 1;
-		grid-row: 1;
-	}
-
-	.hobbies__sessao {
-		grid-area: hobbies;
-		grid-column: 2;
-		grid-row: 1;
-	}
-
-}
