--- a/assets/css/header/perfil.css
+++ b/assets/css/header/perfil.css
@@ -1,4 +1,3 @@
-
 .cabecalho {
 	align-items: center;
 	background: url("../../img/perfil/bg-header.jpg") no-repeat center/cover;
@@ -6,21 +5,28 @@
 	display: flex;
 	font-weight: 600;
 	height: 400px;
+	box-shadow: 0px 1px 14px 0px rgba(0,0,0,0.90);
 }
 
 .perfil {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	min-width: 200px;
+	min-width: 250px;
 }
 
 #perfil__img {
 	border: 4px #fff solid;
 	border-radius: 50%;
 	margin: 10px auto;
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
+}
+
+.perfil__mensagem {
+	width: 100%;
+	max-width: 640px;
+	height: 100px;
 }
 
 @media screen and (min-width:  0px){
