--- a/assets/css/main/hobbies__skills.css
+++ b/assets/css/main/hobbies__skills.css
@@ -1,54 +1,22 @@
 .hobbies__skills {
-	display: grid;
+	display: flex;
+	gap: 10px;
 }
 
-@media screen and (min-width: 0px){
-
+@media screen and (min-width: 0){
 	.hobbies__skills {
-		justify-content: center;
-		grid-template-columns: auto;
-		grid-template-rows: 2;
-		gap: 0;
+		flex-direction: column;
 	}
-
-	.skills__sessao {
-		grid-area: skills;
-		grid-column: 1;
-		grid-row: 1;
-	}
-
-	.hobbies__sessao {
-		grid-area: hobbies;
-		grid-column: 1;
-		grid-row: 2;
-	}
-
 }
 
-@media screen and (min-width: 650px){
+@media screen and (min-width: 620px) {
 	.hobbies__skills {
-		grid-template-columns: auto auto;
-		grid-template-rows: 1;
-		gap: 10px;
+		flex-direction: row;
 	}
-
-	.skills__sessao {
-		grid-area: skills;
-		grid-column: 1;
-		grid-row: 1;
-	}
-
-	.hobbies__sessao {
-		grid-area: hobbies;
-		grid-column: 2;
-		grid-row: 1;
-	}
-
 }
-@media screen and (min-width: 720px){
+
+@media screen and (min-width:  984px){
 	.hobbies__skills {
-		grid-template-columns: auto auto;
-		grid-template-rows: 1;
-		gap: 10%;
+		flex-direction: column;
 	}
 }
