--- a/assets/css/main/sobre__sessao.css
+++ b/assets/css/main/sobre__sessao.css
@@ -6,8 +6,13 @@
 
 .sobre__sessao h1 {
 	color: #8F4342;
-	font-size: 6rem;
+	font-size: 8rem;
 	margin-right: 8px;
+}
+
+
+.sobre__sessao__mim {
+	max-width: 480px;
 }
 
 @media screen and (min-width: 0){
@@ -21,7 +26,7 @@
 @media screen and (min-width: 768px){
 	.sobre__sessao {
 		flex-direction: row;
-		margin: 30px 40px;
+		margin: 30px 0;
 		text-align: start;
 	}
 }
@@ -29,7 +34,7 @@
 @media screen and (min-width: 900px){
 	.sobre__sessao {
 		flex-direction: row;
-		margin: 30px 100px;
+		margin-right: 20px;
 		text-align: start;
 	}
 }
