--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -29,6 +29,7 @@ html {
 	font-size: 62.5%;
 	margin: 0;
 	padding: 0;
+	scroll-behavior: smooth;
 }
 
 body{
@@ -38,10 +39,10 @@ body{
 	display: flex;
 	font-size: 1.6rem;
 	flex-direction: column;
-	position: relative;
 	height: 100vh;
-	margin: 0;
 	padding: 0;
+	position: relative;
+	margin: 0;
 }
 
 #citacao {
