--- a/assets/css/header/nav.css
+++ b/assets/css/header/nav.css
@@ -1,21 +1,60 @@
 nav {
+	margin: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.nav__botao__menu {
 	display: flex;
-	justify-content: center;
+	justify-content: end;
+	color: #fff;
+	align-self: end;
+	padding: 10px;
 }
 
 nav ul {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	padding: 0;
+	margin: 0;
+	width: 100%;
+	transition: 0.5s all;
+}
+
+#btn-menu {
+	display: none;
+}
+
+#btn-menu:checked ~ ul {
+	height: auto;
+	overflow: unset;
+	background: gray;
+	z-index: 100;
+	height: 100%;
+}
+
+#btn-menu:checked ~ label {
+	background: dimgray;
+}
+
+nav input:checked > .nav__botao__menu {
+	background: dimgray;
 }
 
 nav ul li{
+	align-items: center;
+	justify-content: center;
+	display: flex;
 	list-style: none;
-	border-radius: 15px;
 	background: #84484A;
-	box-shadow: 0px 0px 12px -4px rgba(255, 255, 255,1);
 	padding: 10px 10px;
 	margin: 10px;
+	border-radius: 3px;
 }
 
 nav ul li:hover {
@@ -26,3 +65,31 @@ nav ul li a {
 	color: white;
 }
 
+@media screen and (min-width: 0){
+	nav ul {
+		flex-direction: column;
+	}
+
+	.nav__botao__menu {
+		display: flex;
+	}
+	nav ul {
+		height: 10px;
+		overflow: hidden;
+	}
+}
+
+@media screen and (min-width: 768px){
+	nav ul {
+		flex-direction: row;
+	}
+
+	.nav__botao__menu {
+		display: none;
+	}
+
+	nav ul {
+		height: auto;
+		overflow: unset;
+	}
+}
