--- a/assets/css/header/perfil.css
+++ b/assets/css/header/perfil.css
@@ -1,3 +1,8 @@
+header {
+	box-shadow: 0px 1px 14px 0px rgba(0,0,0,0.90);
+	position: relative;
+}
+
 .cabecalho {
 	align-items: center;
 	background: url("../../img/perfil/bg-header.jpg") no-repeat center/cover;
@@ -5,7 +10,6 @@
 	display: flex;
 	font-weight: 600;
 	height: 400px;
-	box-shadow: 0px 1px 14px 0px rgba(0,0,0,0.90);
 }
 
 .perfil {
