--- a/assets/css/main/formacao__sessao.css
+++ b/assets/css/main/formacao__sessao.css
@@ -1,5 +1,18 @@
 /* Formação */
 
+
+
+.formacao__sessao {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	margin-top: 100px;
+}
+
+.formacao__titulo {
+	align-self: center;
+}
+
 .formacao {
 	display: flex;
 	flex-wrap: wrap;
@@ -10,7 +23,7 @@
 	background: #FFFFFF;
 	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
 	border-radius: 8px;
-	border-left: 10px gray solid;
+	border-left: 10px #46A6C3 solid;
 	height: 250px;
 	margin-bottom: 10px;
 	padding: 0 10px;
@@ -25,12 +38,4 @@
 	align-items: center;
 	padding: 5px;
 	gap: 10px;
-}
-
-.formacao .formacao__curso:nth-child(2n){
-	border-left: 10px green solid;
-}
-
-.formacao .formacao__curso:nth-child(3n){
-	border-left: 10px blue solid;
 }
