--- a/assets/css/main/projeto__sessao.css
+++ b/assets/css/main/projeto__sessao.css
@@ -1,3 +1,14 @@
+.projeto__sessao {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	margin-top: 100px;
+}
+
+.projeto__titulo {
+	align-self: center;
+}
+
 .projeto__container {
 	display: flex;
 	flex-direction: row;
@@ -7,10 +18,11 @@
 
 .projeto__card__container {
 	background: #FFFFFF;
-	border-radius: 10px;
+	border-radius: 8px;
 	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	width: 100%;
 	height: 400px;
 	min-width: 300px;
@@ -21,8 +33,19 @@
 .projeto__card__imagem {
 	align-self: center;
 	box-sizing: border-box;
-	border-radius: 10px 10px 0px 0px;
+	border-radius: 8px 8px 0px 0px;
 	width: 100%;
+}
+
+.projeto__card__titulo {
+	text-align: center;
+	margin: 10px  0;
+	padding: 0;
+}
+
+.projeto__card__descricao {
+	margin: 0;
+	padding: 0;
 }
 
 .projeto__card__corpo {
@@ -31,6 +54,66 @@
 	padding: 0px 8px 8px 8px;
 }
 
-.projeto__card__titulo {
-	text-align: center;
+.projeto__card__tags {
+	display: flex;
+	justify-content: space-between;
+	justify-self: end;
+	padding: 10px;
+	background: #FAFAFA;
+	border-radius: 0 0 8px 8px;
+}
+
+.projeto__card__tags ul {
+	display: flex;
+	list-style: none;
+	text-decoration: none;
+	padding: 0;
+	margin: 0;
+}
+
+.projeto__card__tags__list{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 4px 6px;
+	margin-right: 4px;
+	background: lightgray;
+	border-radius: 4px;
+	color: #FFFFFF;
+	font-weight: bolder;
+}
+
+.projeto__card__tags__codigo {
+	display: flex;
+	flex-direction: row;
+}
+
+.projeto__card__mais img {
+	height: 18px;
+}
+
+.projeto__card__tags--html {
+	background: #DF7A49;
+}
+
+.projeto__card__tags--css {
+	background: #49AEDF;
+}
+
+.projeto__card__tags--javascript {
+	background: #E0D152;
+}
+
+.projeto__card__tags--python {
+	background: #5D9283;
+}
+
+.projeto__card__mais {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 5px 5px;
+	border-radius: 4px;
+	background: gray;
+	margin-right: 4px;
 }
