--- a/assets/css/main/sobre__sessao.css
+++ b/assets/css/main/sobre__sessao.css
@@ -4,12 +4,13 @@
 	align-items: center;
 }
 
-.sobre__sessao h1 {
+#ola {
 	color: #8F4342;
 	font-size: 8rem;
 	margin-right: 8px;
-}
+	text-shadow: 0px 0px 8px rgba(0,0,0,0.40);
 
+}
 
 .sobre__sessao__mim {
 	max-width: 480px;
