link projetos e redesociais

--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -1,9 +1,9 @@
 footer {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
 	align-items: center;
 	justify-content: center;
 	background: #93A0AE;
 	box-shadow: 0px 1px 20px -4px rgba(0,0,0,0.80);
+	margin-top: 100px;
 }
