--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,21 +1,6 @@
 @font-face {
-	font-family: 'Montserrat Light';
-	src: url('../fonts/Montserrat-Light.ttf') format("truetype");
-}
-
-@font-face {
-	font-family: 'Montserrat Extra Light';
-	src: url('../fonts/Montserrat-ExtraLight.ttf') format("truetype");
-}
-
-@font-face {
 	font-family: 'PT Sans';
 	src: url('../fonts/pt-sans/PTSans-Regular.ttf') format("truetype");
-}
-
-@font-face {
-	font-family: 'NotoSans Regular';
-	src: url('../fonts/NotoSans-Regular.ttf') format("truetype");
 }
 
 :root {
@@ -25,7 +10,7 @@
 html {
 	color: rgb(82, 82, 82);
 	font-family: "PT Sans";
-	font-weight: 500;
+	font-weight: 400;
 	font-size: 62.5%;
 	margin: 0;
 	padding: 0;
@@ -74,17 +59,10 @@ body{
 	width: 100%;
 }
 
-.titulo__sessao {
+.section__title {
 	color: #8F4342;
 	font-size: 3.5rem;
 	text-shadow: 0px 0px 8px rgba(0,0,0,0.40);
-
-}
-
-svg{
-	fill: #333333;
-	height: 24px;
-	width: auto;
 }
 
 a{
