--- a/assets/css/main/project__section.css
+++ b/assets/css/main/project__section.css
@@ -1,70 +1,80 @@
 .project {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: center;
+	align-items: center;
 	margin: 50px 0;
-}
-
-.project__title {
-	align-self: center;
 }
 
 .project__container {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
 }
 
-.project__cards {
+.project__card {
 	background: #FFFFFF;
-	border-radius: 8px;
+	border-radius: 4px;
 	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	width: 100%;
-	height: 350px;
+	height: 280px;
 	min-width: 300px;
-	max-width: 300px;
-	margin-bottom: 10px;
+	max-width: 365px;
+	margin: 20px 20px;
 }
 
 .project__card__image {
 	align-self: center;
 	box-sizing: border-box;
-	border-radius: 8px 8px 0px 0px;
+	border-radius: 4px 4px 0px 0px;
 	width: 100%;
-	height: 170px;
+	height: 220px;
 }
 
-.project__card__body {
-	display: flex;
-	flex-direction: column;
-	padding: 0px 8px 8px 8px;
-}
-
-.project__card__title {
-	text-align: center;
-	margin: 10px  0;
-	padding: 0;
-}
-
-.project__card__description {
-	margin: 0;
-	padding: 0;
-}
-
-.project__card__coding {
+.project__card__footer {
 	display: flex;
 	justify-content: space-between;
 	justify-self: end;
 	padding: 10px;
+	height: 60px;
+	box-sizing: border-box;
 	background: #FAFAFA;
-	border-radius: 0 0 8px 8px;
+	border-radius: 0 0 4px 4px;
+}
+.project__card__description {
+	display: flex;
+	flex-direction: column;
+	box-sizing: border-box;
+	align-items: center;
 }
 
-.project__card__more {
+.project__card__title {
+	box-sizing: border-box;
+	margin: 0;
+	font-weight: bold;
+	padding-left: 0;
+	text-align: start;
+	width: 100%;
+}
+
+.project__card__subtitle {
+	box-sizing: border-box;
+	display: flex;
+	font-size: 14px;
+	width: 100%;
+	margin: 0;
+}
+
+.project__card__links {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.project__card__link {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -72,9 +82,28 @@
 	border-radius: 4px;
 	background: gray;
 	margin-right: 4px;
+	height: 20px;
 }
 
-.project__card__more img {
-	height: 18px;
+.project__card__link__icon{
+	height: 16px;
+}
+
+@media screen and (min-width: 0){
+	.project__container {
+		justify-content: center;
+	}
+}
+
+@media screen and (min-width: 790px) {
+	.project__container {
+		justify-content: space-around;
+	}
+}
+
+@media screen and (min-width: 1275px){
+	.project__container {
+		justify-content: space-between;
+	}
 }
 
