sessao educação refeita

--- a/assets/css/footer/contact__us.css
+++ b/assets/css/footer/contact__us.css
@@ -1,9 +1,11 @@
 .contact-us {
 	display: flex;
 	align-items: flex-end;
+	box-sizing: border-box;
 	justify-content: center;
 	width: 100%;
 	gap: 5rem;
+	padding: .6rem;
 }
 
 .contact-us__image {
