--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -59,10 +59,11 @@ body{
 	width: 100%;
 }
 
-.section__title {
+.u-section__title {
 	color: #8F4342;
 	font-size: 3.5rem;
 	text-shadow: 0px 0px 8px rgba(0,0,0,0.40);
+	align-self: center;	
 }
 
 a{
