--- a/assets/css/main/education__section.css
+++ b/assets/css/main/education__section.css
@@ -1,38 +1,83 @@
-/* Formação */
-.formacao__sessao {
+.c-education__section {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	margin-top: 100px;
 }
 
-.formacao__titulo {
-	align-self: center;
-}
-
-.formacao {
+.c-education__container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
-.formacao__curso{
-	background: #FFFFFF;
-	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
-	border-radius: 8px;
-	border-left: 10px #46A6C3 solid;
-	height: 250px;
-	margin-bottom: 10px;
-	padding: 0 10px;
-	padding-bottom: 10px;
-	max-width: 280px;
-	width: 100%;
+.c-education__card {
+  width: 320px;
+  overflow: hidden;
+  border-radius: 10px;
+  background: ghostwhite;
+  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.4);
+  margin: 20px;
 }
 
-.formacao__curso-escola, .formacao__curso-date, .formacao__curso-descricao{
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	padding: 5px;
-	gap: 10px;
+.c-education__card__header {
+  display: flex;
+  justify-content: center;
+  background: cadetblue;
+  background-image: url('../../img/icon/education/graduation.svg');
+  height: 100px;
+  width: 100%;
+  position: relative;
+  box-shadow: 1px 0px 4px 1px rgba(0,0,0,0.3);
+}
+
+.c-education__card__title {
+  display: flex;
+  align-self: center;
+  color: aliceblue;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 40px;
+}
+
+.c-education__card__image {
+  height: 76px;
+  width: 76px;
+  padding: 6px;
+  box-sizing: border-box;
+  border-image: 0;
+  border-radius: 50%;
+  background-color: ghostwhite;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: calc(-76px / 2);
+  right: calc(50% - width);
+  box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.4);
+}
+
+.c-education__card__image:hover{
+  transform: rotate(360deg);
+  transition: all .8s;
+}
+
+.c-education__card__body {
+  padding: 32px 8px 8px 8px;
+  position: relative;
+  min-height: 230px;
+}
+
+.c-education__card__button {
+  color: coral;
+  padding: 6px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 779px){
+	.c-education__container {
+		justify-content: center;
+	}
 }
