--- a/assets/scss/header/_perfil.scss
+++ b/assets/scss/header/_perfil.scss
@@ -5,7 +5,7 @@ header {
 
 .cabecalho {
 	align-items: center;
-	background: url("../../img/perfil/bg-header.jpg") no-repeat center/cover;
+	background: url("../img/perfil/bg-header.jpg") no-repeat center/cover;
 	color: var(--white-300);
 	display: flex;
 	font-weight: 600;
