--- a/assets/scss/main/_education__section.scss
+++ b/assets/scss/main/_education__section.scss
@@ -26,7 +26,7 @@
   align-items: center;
   background: cadetblue;
   background-image: url('../img/icon/education/graduation.svg');
-  height: 100px;
+  min-height: 100px;
   width: 100%;
   position: relative;
   box-shadow: 1px 0px 4px 1px rgba(0,0,0,0.3);
@@ -54,7 +54,7 @@
   position: absolute;
   bottom: calc(-76px / 2);
   right: calc(50% - width);
-  box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.4);
 }
 
 .c-education__card__image:hover{
