--- a/assets/scss/main/_skills__section.scss
+++ b/assets/scss/main/_skills__section.scss
@@ -1,41 +1,35 @@
-.skills__sessao {
+.c-skills__section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
 }
 
-.skills__carrossel {
+.c-skills__carrossel {
 	align-items: center;
 	background: #FFFFFF;
 	border-radius: 10px;
-	box-shadow: 0px 0px 14px -7px rgba(0,0,0,0.80);
+	box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.3);
 	display: flex;
 	height: auto;
 	width: 300px;
 	overflow: hidden;
 }
 
-.skills {
+.c-skills__container {
 	display: flex;
 	transition: transform 0.4s ease-in-out;
 	transform: translateX(0px);
 }
 
-.skills__card{
+.c-skills__card{
 	align-items: center;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	height: auto;
-	margin-right: 10px;
 }
 
-.skills__card__icon {
+.c-skills__card__icon {
 	background: #7AC4C5;
-}
-
-.skills__card__text {
-	padding: 0 5px;
-	max-width: 200px;
 }
