--- a/assets/scss/main/_about.scss
+++ b/assets/scss/main/_about.scss
@@ -1,4 +1,4 @@
-.sobre {
+.about {
 	display: flex;
 	flex-direction: row;
 	padding: 30px;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (min-width: 0){
-	.sobre {
+	.about {
 		flex-direction: column;
 		padding: 0 8%;
 
@@ -17,7 +17,7 @@
 }
 
 @media screen and (min-width: 984px){
-	.sobre {
+	.about {
 		flex-direction: row;
 		padding: 0;
 
