--- a/assets/scss/main/_education__section.scss
+++ b/assets/scss/main/_education__section.scss
@@ -2,13 +2,15 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	margin-top: 100px;
 }
 
 .c-education__container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+  width: 100%;
+  max-width: 1133px;
+  margin: 20px auto;
 }
 
 .c-education__card {
@@ -17,7 +19,7 @@
   border-radius: 10px;
   background: ghostwhite;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.4);
-  margin: 20px;
+  margin: 20px 4px;
 }
 
 .c-education__card__header {
