--- a/assets/scss/main/_project__section.scss
+++ b/assets/scss/main/_project__section.scss
@@ -3,19 +3,22 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin: 50px 0;
+	max-width: 1133px;
+	width: 100%;
+	margin: 50px auto;
 }
 
 .c-project__container {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	justify-content: start;
 }
 
 .c-project__card {
 	background: #FFFFFF;
 	border-radius: 10px;
-	box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.80);
+	box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.30);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -23,7 +26,7 @@
 	height: 280px;
 	min-width: 300px;
 	max-width: 365px;
-	margin: 20px 20px;
+	margin: 20px 4px;
 	position: relative;
 	overflow: hidden;
 }
@@ -124,13 +127,13 @@
 
 @media screen and (min-width: 790px) {
 	.c-project__container {
-		justify-content: space-around;
+		justify-content: space-evenly;
 	}
 }
 
-@media screen and (min-width: 1275px){
+@media screen and (min-width: 1119px) {
 	.c-project__container {
-		justify-content: space-between;
+		justify-content: start;
 	}
 }
 
